# GIATAR-dataset

./: .env  README.md  environment.yml  pyproject.toml
data_update/: 0a_create_env.py  0b2_get_sinas_species_list.py  0b_get_asfr_species_list.py  0b_get_sinas_species_list.py  0c_get_cabi_species_list.py  0d_get_eppo_species_list.py  0e_get_daisie_species_list.py  1a2_check_alternate_sources.R  1a2_check_alternate_sources.R.R  1a2_check_unfound_gbif_keys.py  1a2_integrate_unmatched.py  1a3_integrate_unmatched.py  1a_new_species_gbif_match.py  1b_new_species_check_invasive.py  1c2_check_unfound_gbif_keys.py  1c2_test.ipynb  1c_combine_species_lists.py  2_new_gbif_obs.py  3a_get_eppo_species_report.py  3b_get_monthly_eppo_reports.py  3c_get_eppo_species_dist.py  3d_process_daisie_data.py  4_consolidate_all_occurence.py  5_eppo_api_update.py  6_consolidate_DAISIE.ipynb  6_create_parquet.ipynb  GIATAR_data_update.ipynb  data_functions.py  figures.ipynb
data_update/r_scripts/: match_unmatched_species.R
data_update/resolved_names/: 1_raw_results.json
make_figures/: sets_data.txt
query functions/: GITAR_query_functions.py
query_functions/: GIATAR_Queries_Tutorial.ipynb  GIATAR_query_functions.py  GITAR_Queries_Tutorial.ipynb  GITAR_Queries_Tutorial.rmd  GITAR_query_functions.py
query_functions/R/: .env  GIATAR query_functions.R  GIATAR_R.r  GIATAR_query_functions.R  GITAR_Queries_Tutorial.rmd
query_functions/python/: .env  GIATAR_Queries_Tutorial.ipynb  (+1 more)
tutorials/: GIATAR_Queries_Tutorial.ipynb  GIATAR_Queries_Tutorial.rmd  GIATAR_data_update.ipynb
